[package]
name = "simple_video_tags"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.22.0"
egui = "0.22.0"
egui-video = { git = "https://github.com/n00kii/egui-video", rev = "2277be8" }
rfd = "0.11.4"
sdl2 = "0.35.2"
serde = { version = "1.0.181", features = ["derive"] }
serde_json = "1.0.104"
sha256 = "1.3.0"
