[package]
name = "simple_video_tags"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.23"
egui = "0.23"
egui-video = { git = "https://github.com/n00kii/egui-video", rev = "f595194" }
rfd = "0.12"
serde = { version = "1.0.181", features = ["derive"] }
serde_json = "1.0.104"
sha256 = "1.3.0"
